    [FIX]           TextureCache: unbindImageAsync failed to unbind all asynchronous callback for a specified bound image
    [FIX]           TileMap: crashed if a layer contains nothing
    [FIX]           WebView: memory leak on iOS
    [FIX]           WebView: crashed if url contains illegal characters on Android

cocos2d-x-3.6  Apr.30 2015
    [NEW]           3rd: update chipmunk to v 6.2.2 on Windows 8.1 Universal App
    [NEW]           3rd: update freetype to v 2.5.5 on Windows 8.1 Universal App
    [NEW]           C++: Added SpritePolygon
    [NEW]           Label: added LabelEffect::ALL which can be used in disableEffect(LabelEffect) to disable all effects
    [NEW]           Lua-binding: binded ui:WebView and added corresponidng test case
    [NEW]           MathUtil: added `MathUtil::lerp()`
    [NEW]           UserDefault: added `UserDefault::setDelegate()`
    [NEW]           Vec2: added `Vec2::setZero()`
    [NEW]           Vec3: added `Vec3::lerp()`
    [NEW]           WP8: remove WP8 support because Angle don't support WP8 any more
    [NEW]           WP8.1: added back button support

    [FIX]           Animate3D: modify `Animate3D::setHighQuality()` Animate3D::setQuality(), add a new animation quality type none which means that will not update animation to the bone, it is useful when the Sprite3D is out of the screen, it can safe a lot of cpu time.
    [FIX]           AnimationCurve: memory leak
    [FIX]           Bundle3D: memory leak when failed to load file
    [FIX]           HttpClient: memory leak on iOS
    [FIX]           JNI: JNI illegal start byte error which causes crashing error on Android 5.0
    [FIX]           PUParticleSystem3D: refactoring create function using initWithXXX
    [FIX]           UI:VideoPlayer: crashed when playing streamed MP4 file on iOS
    [FIX]           VideoPlayer: can not play videos on Android v2.3.x

cocos2d-x-3.6beta0 Apr.14 2015
    [NEW]           3rd: update Spine runtime to v2.1.25