@@ -34,6 +34,7 @@ cocos2d-x-3.7  ??
     [FIX]           TileMap: crashed if a layer contains nothing
     [FIX]           WebView: memory leak on iOS
     [FIX]           WebView: crashed if url contains illegal characters on Android
+    [FIX]           Lua: luaLoadChunksFromZip should just remove .lua or .luac extension
 
 cocos2d-x-3.6  Apr.30 2015
     [NEW]           3rd: update chipmunk to v 6.2.2 on Windows 8.1 Universal App
